2003-08-22  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer-attachment.c (): Connect response signal to
	attachment properties dialog, fix bug #47950.

2003-08-21  Antonio Xu  <antonio.xu@sun.com>

	* Makefile.am (INCLUDES): add EVOLUTION_IMAGESDIR define
	* e-msg-composer.c (create_composer): use EVOLUTION_IMAGESDIR
	and composer icon name to get the path of composer icon.
	[#47781]

2003-08-19  Jeffrey Stedfast  <fejj@ximian.com>

	* Original patch from David Woodhouse, but modified a bit by me.

	* e-msg-composer.c (handle_mailto): Fix insertion of arbitrary
	headers from mailto: links. Ignore From: and Reply-To: headers.

2003-08-13  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* e-msg-composer-hdrs.c (account_removed_cb): fixed an insulting
	error message. Fixes bug #47413.

2003-08-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (update): This needs to use
	camel_data_wrapper_decode_to_stream() rather than
	write_to_stream(). Also simplify a bit - no sense looping to load
	the pixbuf data into the gdk-pixbuf loader 4K at a time when we
	have the whole thing in a memory buffer already. Once done, unref
	the stream instead of closing it so we don't leak.
	(attach_to_multipart): Use decode_to_stream().

	* e-msg-composer-attachment.c (e_msg_composer_attachment_new):
	Avoid constructing thwe data-wrapper from the stream twice for
	message/rfc822 parts.

2003-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): don't set
	the rawtext bit anymore.

	* e-msg-composer.c (build_message): Convert the plain part's
	content stream from UTF-8 to whatever charset we want.

2003-07-31  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer.c (drag_data_received): add the drop type of
	mozilla browser link to make composer support to handle mozilla
	DnD data.  [#47131]

2003-07-28  Antonio Xu <antonio.xu@sun.com>

	* e-msg-composer-attachment-bar.c  (update): add